Modified both home page and base with content and styling

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,14 @@
 {% extends "base.html"%}
 
 {% block content %}
-<h1>Homepage</h1>
+<h1>EventGearSauce</h1>
+<br />
+<p>
+    We are a one-stop source for sound and audiovisual equipment retnal for live events in Johannesburg, South Africa. Whether your event is a corporate presentation of a new product, 
+    or a live show bringing in significant talent to entertain your guests and fans, Event Gear Sauce has what you need to make your event a success!
+</p>
+<br />
+<p>
+    We also engage with industry specialists on your behalf, should you require that extra special touch to make your event extraordinary!
+</p>
 {% endblock content%}
