--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
 <header>
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'about' %}">About Us</a>
-    <a href="{% url 'contact' %}">Contact Us</a>
+    <a href="{% url 'home' %}">&nbsp Home &nbsp</a>
+    <a href="{% url 'about' %}">&nbsp About Us &nbsp</a>
+    <a href="{% url 'contact' %}">&nbsp Contact Us &nbsp</a>
 </header>
 
 {% block content %}{% endblock content %}
