Added equipment stock list and equipment stock detail pages for equipment review

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,4 +12,6 @@
 <p>
     We also engage with industry specialists on your behalf, should you require that extra special touch to make your event extraordinary!
 </p>
+<br />
+<h2><a href="{% url 'equipment_stock_list' %}">Equipment available for hire</a></h2>
 {% endblock content%}
