--- a/templates/equipment_stock_detail.html
+++ b/templates/equipment_stock_detail.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="">
-    <h2>{{ equipment_stock_item.model_name }}</h2>
-    <p>Manufacturer:&nbsp{{ equipment_stock_item.manufacturer }}</p>
-    <p>{{ equipment_stock_item.description }}</p>
+    <h2>{{ object.model_name }}</h2>
+    <p>Manufacturer:&nbsp{{ object.manufacturer }}</p>
+    <p>{{ object.description }}</p>
 </div>
 {% endblock content%}
