--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     </head>
     <header>
         <div class="nav">
+            <div class="nav-left">
+                <h1>EventGearSauce</h1>
+            </div>
             <div class="nav-right">
                 <a href="{% url 'home' %}">&nbsp Home &nbsp</a>
                 <a href="{% url 'about' %}">&nbsp About Us &nbsp</a>
