--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,13 @@
             </div>
         </div>
     </header>
-    {% block content %}{% endblock content %}
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}!</p>
+        <p><a href="{% url 'logout' %}">Log Out</a></p>
+    {% else %}
+        <p>You are not logged in.</p>
+        <a href="{% url 'login' %}">Log In</a>
+    {% endif %}
+    {% block content %}
+    {% endblock content %}
 </html>
