Added basic Bootstrap elements for navigation bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,7 +15,7 @@ header h1 a {
     text-decoration: none;
 }
 
-.nav {
+.nav-bg {
     background-color: #97f;
     overflow: hidden;
     padding-top: 2rem;
