--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,13 @@
 <html>
     <head>
         <title>EventGearSauce</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">        
         <link href="https://fonts.googleapis.com/css?family=Kanit:400" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}" rel="stylesheet">
     </head>
-    <header>
+    <!--<header>
         <div class="nav">
             <div class="nav-left">
                 <h1>EventGearSauce</h1>
@@ -17,14 +20,50 @@
                 <a href="{% url 'contact' %}">&nbsp Contact Us &nbsp</a>
             </div>
         </div>
-    </header>
-    {% if user.is_authenticated %}
-        <p>Hi {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">Log Out</a></p>
-    {% else %}
-        <p>You are not logged in.</p>
-        <a href="{% url 'login' %}">Log In</a>
-    {% endif %}
-    {% block content %}
-    {% endblock content %}
+    </header>-->
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark nav-bg">
+            <div class="container-fluid">
+                <div class="nav-left">
+                    <h1>EventGearSauce</h1>
+                </div>
+                <div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'about' %}">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="navbar-nav">
+                        {% if user.is_authenticated %}
+                        <span class="navbar-text">Logged in as {{user.username}} | </span>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>        
+        <div class="container">
+            {% block content %}
+            {% endblock content %}
+        </div>
+        <script 
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" 
+            crossorigin="anonymous">
+        </script>
+    </body>
 </html>
