--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,11 @@
                         {% if user.is_authenticated %}
                         <span class="navbar-text">Logged in as {{user.username}} | </span>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
+                            <a class="nav-link" href="{% url 'login' %}">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                         {% endif %}
                     </ul>
