--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,22 +1,29 @@
 .navbar {
-    background-color: #888;
+    background-color: #97f;
     height: 85px;
     display: flex;
     justify-content: space-between;
+    width: 100%;
     padding: 0.2rem calc((100vw - 1000px) / 2);
     z-index: 12;
 }
 
 .navlink {
-    color: #777;
+    color: #bbb;
     display: flex;
     align-items: center;
     text-decoration: none;
+    text-align: center;
     padding: 0 1rem;
     height: 100%;
     cursor: pointer;
     &.active {
-        color: #474dcc;
+        background-color: blue;
+        color: #ddd;    
+    }
+    &.hover {
+        background-color: #97f;
+        color: #777;
     }
 }
 
