--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #97f;
+    background-color: #a8f;
     height: 85px;
     display: flex;
     justify-content: space-between;
@@ -9,7 +9,7 @@
 }
 
 .navlink {
-    color: #bbb;
+    color: #028;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -18,12 +18,8 @@
     height: 100%;
     cursor: pointer;
     &.active {
-        background-color: blue;
+        background-color: #75f;
         color: #ddd;    
-    }
-    &.hover {
-        background-color: #97f;
-        color: #777;
     }
 }
 
